--- a/kcet/kcet-2023.md
+++ b/kcet/kcet-2023.md
@@ -1,3 +1,12 @@
 # Karnataka CET 2023
 
-[UG CET 2023 - Online Application Print Link 02/05/2023](https://cetonline.karnataka.gov.in/cetprint2023/forms/admissionticket.aspx)
+```
+The Executive Director, Karnataka Examinations Authority,
+Tel: 080-23460460 (5-lines)
+WhatsApp Number :+91 9741388123
+Website: http://www.kea.kar.nic.in
+E-mail: keaugcet2023@gmail.com
+```
+
+- [UG CET 2023 - Online Application Print Link 02/05/2023](https://cetonline.karnataka.gov.in/cetprint2023/forms/admissionticket.aspx)
+- [UG CET 2023 - School/College Details Edit Link (27/06/2023)](https://cetonline.karnataka.gov.in/studydetails2023/forms/login.aspx)
