--- a/kcet/kcet-2023.md
+++ b/kcet/kcet-2023.md
@@ -8,5 +8,6 @@ Website: http://www.kea.kar.nic.in
 E-mail: keaugcet2023@gmail.com
 ```
 
-- [UG CET 2023 - Online Application Print Link 02/05/2023](https://cetonline.karnataka.gov.in/cetprint2023/forms/admissionticket.aspx)
-- [UG CET 2023 - School/College Details Edit Link (27/06/2023)](https://cetonline.karnataka.gov.in/studydetails2023/forms/login.aspx)
+- :link: [UG CET 2023 - Online Application Print Link 02/05/2023](https://cetonline.karnataka.gov.in/cetprint2023/forms/admissionticket.aspx)
+- :link: [UG CET 2023 - School/College Details Edit Link (27/06/2023)](https://cetonline.karnataka.gov.in/studydetails2023/forms/login.aspx)
+- :memo: [UG CET 2023 - School/College Details Edit Notification](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230626184303english.pdf)
