--- a/kcet/kcet-2023.md
+++ b/kcet/kcet-2023.md
@@ -13,3 +13,4 @@ E-mail: keaugcet2023@gmail.com
 - :memo: [School/College Details Edit Notification](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230626184303english.pdf) [:green_book:](20230626184303english.pdf)
 - :memo: [Regarding BEO Verification for candidates who have studied in Bengaluru](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230626012036english.pdf)
 - :memo: [Rank-wise Schedule for Document Verification (23-06-2023)](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230623174103english.pdf)
+- :memo: [Note on Online Verification of Document (23-06-2023)](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230623174123english.pdf)
