--- a/kcet/kcet-2023.md
+++ b/kcet/kcet-2023.md
@@ -10,7 +10,7 @@ E-mail: keaugcet2023@gmail.com
 
 - :link: [Online Application Print Link 02/05/2023](https://cetonline.karnataka.gov.in/cetprint2023/forms/admissionticket.aspx)
 - :link: [School/College Details Edit Link (27/06/2023)](https://cetonline.karnataka.gov.in/studydetails2023/forms/login.aspx)
-- :memo: [School/College Details Edit Notification](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230626184303english.pdf) [:green_book:](20230626184303english.pdf)
+- :memo: [School/College Details Edit Notification](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230626184303english.pdf) [:green_book:](./docs/20230626184303english.pdf)
 - :memo: [Regarding BEO Verification for candidates who have studied in Bengaluru](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230626012036english.pdf)
 - :memo: [Rank-wise Schedule for Document Verification (23-06-2023)](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230623174103english.pdf)
 - :memo: [Note on Online Verification of Document (23-06-2023)](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230623174123english.pdf)
