--- a/kcet/kcet-2023.md
+++ b/kcet/kcet-2023.md
@@ -14,3 +14,13 @@ E-mail: keaugcet2023@gmail.com
 - :memo: [Regarding BEO Verification for candidates who have studied in Bengaluru](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230626012036english.pdf)
 - :memo: [Rank-wise Schedule for Document Verification (23-06-2023)](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230623174103english.pdf)
 - :memo: [Note on Online Verification of Document (23-06-2023)](https://cetonline.karnataka.gov.in/keawebentry456/cet2023/20230623174123english.pdf)
+
+
+To add checklist
+- Rank Card (need at Open Hall)
+- Inside Common Hall - no documents asked
+- BLR North/South Issue
+- Inside Hall 1 / Hall 2 - need to show print out of Application, Original Study Cert both, Marks Card both,
+- Verify marks
+- Student to sign on Verification slip of BEO and Student
+- Collect Student copy of Verification Slip
